--- a/core/templates/core/home_finalizados.html
+++ b/core/templates/core/home_finalizados.html
@@ -67,7 +67,7 @@
             <img src="{% static 'img/footer-icon/calendar.svg' %}" alt="Agendamentos" class="nav-icon">
             <span class="nav-label">Agendamentos</span>
         </a>
-        <a href="#" class="nav-item">
+        <a href="{% url 'perfil_prestador' %}" class="nav-item">
             <img src="{% static 'img/footer-icon/user.svg' %}" alt="Perfil" class="nav-icon">
             <span class="nav-label">Perfil</span>
         </a>
