--- a/core/templates/core/home_prestador.html
+++ b/core/templates/core/home_prestador.html
@@ -85,15 +85,12 @@
     
     </main>
 
-    <!-- 3. RODAPÉ DO PRESTADOR (COM <img>) -->
     <nav class="app-navbar prestador-navbar">
-        <a href="#" class="nav-item active">
-            <!-- MUDANÇA AQUI: SVG trocado por IMG -->
+        <a href="{% url 'perfil_prestador' %}" class="nav-item">
             <img src="{% static 'img/footer-icon/calendar.svg' %}" alt="Agendamentos" class="nav-icon">
             <span class="nav-label">Agendamentos</span>
         </a>
-        <a href="#" class="nav-item">
-            <!-- MUDANÇA AQUI: SVG trocado por IMG -->
+        <a href="{% url 'perfil_prestador' %}" class="nav-item">
             <img src="{% static 'img/footer-icon/user.svg' %}" alt="Perfil" class="nav-icon">
             <span class="nav-label">Perfil</span>
         </a>
