--- a/core/templates/core/admin/solicitacoes.html
+++ b/core/templates/core/admin/solicitacoes.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'core/base/base.html' %}
 {% load static %}
 {% block title %}Detalhe | WONDER{% endblock title %}
 
@@ -10,7 +10,7 @@
 
 <header class="app-header">
     <div class="header-logo">
-        <a href="{% url 'solicitacoes' %}"><span class="logo-name">Admin</span></a>
+        <a href="{% url 'admin-solicitacoes' %}"><span class="logo-name">Admin</span></a>
     </div>
     <a href="{% url 'login' %}" class="logout-button">
       <img src="{% static 'img/profile/logout.svg' %}" alt="">
@@ -20,8 +20,8 @@
 
 <section class="home-content">
     <div class="nav-tabs-container">
-        <a href="{% url 'solicitacoes' %}"><button class="option-tab active">Solicitações</button></a>
-        <a href="{% url 'categorias' %}"><button class="option-tab inactive">Categorias</button></a>
+        <a href="{% url 'admin-solicitacoes' %}"><button class="option-tab active">Solicitações</button></a>
+        <a href="{% url 'admin-categorias' %}"><button class="option-tab inactive">Categorias</button></a>
     </div>
 
     <span class="text-tag">Solicitações Pendentes</span>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="block-day-btn">
-                <a href="{% url 'detalhes-solicitacoes' %}"><button class="botao-visualizar">Visualizar</button></a>
+                <a href="{% url 'admin-detalhes--solicitacao' %}"><button class="botao-visualizar">Visualizar</button></a>
                 <button class="botao-vermelho">Recusar</button>
             </div>
         </article>
@@ -53,7 +53,7 @@
             </div>
         </article>
 
-                <article class="result-card">
+        <article class="result-card">
             <div class="card-details">
                 <img src="{% static 'img/SPA-da-gi.svg' %}" alt="">
                 <div class="card-info">
