--- a/core/templates/core/auth/opcoes_cadastro.html
+++ b/core/templates/core/auth/opcoes_cadastro.html
@@ -26,11 +26,11 @@
         <h1 class="card-title">Olá, você deseja<br />se cadastrar como...</h1>
 
         <div class="options-wrapper">
-          <a href="{% url 'cidade' %}" class="option-button">
+          <a href="{% url 'cliente-cidade' %}" class="option-button">
             <span>Cliente</span>
           </a>
 
-          <a href="#" class="option-button">
+          <a href="{% url 'prestador-home' %}" class="option-button">
             <span>Prestador de serviço</span>
           </a>
         </div>
