--- a/core/templates/core/base/base.html
+++ b/core/templates/core/base/base.html
@@ -38,24 +38,24 @@
         <nav>
             <ul class="nav-list">
                 <li class="nav-item nav-item--active">
-                    <a href="{% url 'home-cliente'%}">
+                    <a href="{% url 'cliente-home'%}">
                         <img src="{% static 'img/footer-icon/home-ativo.svg' %}" alt="" class="nav-icon">
                         <span class="nav-text">Início</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'search'%}">
+                    <a href="{% url 'cliente-busca'%}">
                         <img src="{% static 'img/footer-icon/search.svg' %}" alt="" class="nav-icon">
                         <span class="nav-text">Busca</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'agendamento' %}"> <img src="{% static 'img/footer-icon/calendar.svg' %}" alt="" class="nav-icon">
+                    <a href="{% url 'cliente-agendamentos' %}"> <img src="{% static 'img/footer-icon/calendar.svg' %}" alt="" class="nav-icon">
                         <span class="nav-text">Agendamentos</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'perfil-usuario' %}"> <img src="{% static 'img/footer-icon/user.svg' %}" alt="" class="nav-icon">
+                    <a href="{% url 'cliente-perfil' %}"> <img src="{% static 'img/footer-icon/user.svg' %}" alt="" class="nav-icon">
                         <span class="nav-text">Perfil</span>
                     </a>
                 </li>
