--- a/core/templates/core/prestador/finalizados.html
+++ b/core/templates/core/prestador/finalizados.html
@@ -1,4 +1,4 @@
-{% extends 'core/base_auth.html' %}
+{% extends 'core/base/base_auth.html' %}
 {% load static %}
 
 {% block title %}Agendamentos Finalizados | WONDER{% endblock title %}
@@ -22,7 +22,7 @@
     <main class="main-content">
         
         <div class="nav-tabs-container">
-            <a href="{% url 'home_prestador' %}"><button class="option-tab inactive">EM ABERTO</button></a>
+            <a href="{% url 'prestador-home' %}"><button class="option-tab inactive">EM ABERTO</button></a>
             <button class="option-tab active">FINALIZADOS</button>
         </div>
 
@@ -31,7 +31,7 @@
                 <img src="{% static 'img/calendario_roxo.svg' %}" alt="Calendário">
                 <span>08/10/2025</span>
             </div>
-            <a href="{% url 'home_cancelados' %}" class="filtro-cancelados">
+            <a href="{% url 'prestador-cancelados' %}" class="filtro-cancelados">
                 <span>Ver Cancelados</span>
                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M13.5 4.5L4.5 13.5" stroke="#5D14A6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -63,11 +63,11 @@
     </main>
 
     <nav class="app-navbar prestador-navbar">
-        <a href="{% url 'home_prestador' %}" class="nav-item active">
+        <a href="{% url 'prestador-home' %}" class="nav-item active">
             <img src="{% static 'img/footer-icon/calendar.svg' %}" alt="Agendamentos" class="nav-icon">
             <span class="nav-label">Agendamentos</span>
         </a>
-        <a href="{% url 'perfil_prestador' %}" class="nav-item">
+        <a href="{% url 'prestador-perfil' %}" class="nav-item">
             <img src="{% static 'img/footer-icon/user.svg' %}" alt="Perfil" class="nav-icon">
             <span class="nav-label">Perfil</span>
         </a>
