--- a/core/templates/core/prestador/home.html
+++ b/core/templates/core/prestador/home.html
@@ -1,4 +1,4 @@
-{% extends 'core/base_auth.html' %}
+{% extends 'core/base/base_auth.html' %}
 {% load static %}
 
 {% block title %}Home Prestador | WONDER{% endblock title %}
@@ -22,7 +22,7 @@
         
         <div class="nav-tabs-container">
             <button class="option-tab active">EM ABERTO</button>
-            <a href="{% url 'home_finalizados' %}"><button class="option-tab inactive">FINALIZADOS</button></a>
+            <a href="{% url 'prestador-finalizados' %}"><button class="option-tab inactive">FINALIZADOS</button></a>
         </div>
 
         <a href="#" class="link-hoje">
@@ -86,11 +86,11 @@
     </main>
 
     <nav class="app-navbar prestador-navbar">
-        <a href="{% url 'perfil_prestador' %}" class="nav-item">
+        <a href="{% url 'prestador-home' %}" class="nav-item">
             <img src="{% static 'img/footer-icon/calendar.svg' %}" alt="Agendamentos" class="nav-icon">
             <span class="nav-label">Agendamentos</span>
         </a>
-        <a href="{% url 'perfil_prestador' %}" class="nav-item">
+        <a href="{% url 'prestador-perfil' %}" class="nav-item">
             <img src="{% static 'img/footer-icon/user.svg' %}" alt="Perfil" class="nav-icon">
             <span class="nav-label">Perfil</span>
         </a>
