--- a/core/templates/core/prestador/perfil.html
+++ b/core/templates/core/prestador/perfil.html
@@ -1,4 +1,4 @@
-{% extends 'core/base_auth.html' %}
+{% extends 'core/base/base_auth.html' %}
 
 {% load static %}
 
@@ -114,11 +114,11 @@
     </main>
 
     <nav class="app-navbar prestador-navbar">
-        <a href="{% url 'home_prestador' %}" class="nav-item">
+        <a href="{% url 'prestador-home' %}" class="nav-item">
             <img src="{% static 'img/footer-icon/calendar.svg' %}" alt="Agendamentos" class="nav-icon">
             <span class="nav-label">Agendamentos</span>
         </a>
-        <a href="{% url 'perfil_prestador' %}" class="nav-item active">
+        <a href="{% url 'prestador-perfil' %}" class="nav-item active">
             <img src="{% static 'img/footer-icon/user.svg' %}" alt="Perfil" class="nav-icon">
             <span class="nav-label">Perfil</span>
         </a>
